<resources>
    <string name="BETA_GRAPHQL_ENV">com.nytimes.android.phoenix.beta.GRAPHQL_ENV</string>
    <string name="DEV">DEV</string>
    <string name="GOOGLE">GOOGLE</string>
    <string name="ITERATE_HOME_SCROLL_EVENT">android-home-feed-scroll-survey</string>
    <string name="ITERATE_HYBRID_SCROLL_UP_EVENT">android-home-hybridStory-scrollUp</string>
    <string name="ITERATE_PLAY_TAB_SCROLL_UP_EVENT">play-tab-scroll-depth</string>
    <string name="ITERATE_YOU_TAB_SCROLL_EVENT">android-youtab-scroll</string>
    <string name="PRODUCTION">PRODUCTION</string>
    <string name="STAGING">STAGING</string>
    <string name="TEST">TEST</string>
    <string name="aws_access_key_id">AKIAUM4G6O6NBZNALHFG</string>
    <string name="aws_secret_access_key">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</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_category_key">About Preferences Category Key</string>
    <string name="abra_appName">com.nytimes.android</string>
    <string name="abra_v12_base_url">https://a1.nyt.com</string>
    <string name="abra_v12_integration_prd">android-core-prd</string>
    <string name="abra_v12_integration_stg">android-core-stg</string>
    <string name="abra_v12_json_file">/abra-v12-allocations.json</string>
    <string name="abra_v12_url">https://abra.api.nytimes.com/v12/allocations</string>
    <string name="accessibility_email_share">Share to Email</string>
    <string name="accessibility_facebook_share">Share to Facebook</string>
    <string name="accessibility_play_video">Play Video</string>
    <string name="accessibility_share">Share</string>
    <string name="accessibility_twitter_share">Share to Twitter</string>
    <string name="accessibility_unmute_video">Unmute Video</string>
    <string name="account">Account</string>
    <string name="account_benefits_button_text">Save and continue</string>
    <string name="account_benefits_supporting_message">Now that you can read without limits, what would you like to stay updated on?</string>
    <string name="account_benefits_thank_you">Thank you for becoming a subscriber.</string>
    <string name="account_category_key">Account Category Key</string>
    <string name="account_settings_key">Account Settings</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="articlesLeft">text_you_have_free_articles_mc</string>
    <string name="auto_play_video_settings_key">autoplay_video_settings</string>
    <string name="auto_play_video_settings_title">Video Autoplay</string>
    <string name="autoplay_default">@string/autoplay_wifi_only_value</string>
    <string name="background_desc">Tap to change data settings for daily background updates</string>
    <string name="background_update">Background Update</string>
    <string name="background_update_default">@string/wifi_only_value</string>
    <string name="background_update_key">Background Update</string>
    <string name="bnaRingtoneTitle">Choose ringtone</string>
    <string name="connectAccount">Connect Account</string>
    <string name="connect_account_key">Connect Account</string>
    <string name="data_management_category_key">Data Management Category Key</string>
    <string name="developer_settings_title">Developer Settings</string>
    <string name="download_images_summary">Tap to change your image download settings</string>
    <string name="download_images_title">Image Download Settings</string>
    <string name="download_sections_summary">Choose how much content you\'d like to download for offline reading</string>
    <string name="download_sections_title">Offline Reading</string>
    <string name="download_top_value">top</string>
    <string name="help_key">help</string>
    <string name="home_delivery_key">Home Delivery</string>
    <string name="hybrid_download_image_key">downloadImages</string>
    <string name="hybrid_download_some_images_value">some</string>
    <string name="key_bna_ringtone">bnaRingtone</string>
    <string name="key_bna_vibrate">bnaVibrate</string>
    <string name="key_download_sections">downloadAll</string>
    <string name="key_notifications">settings_key_notifications</string>
    <string name="logInMC">link_already_subscriber_mc</string>
    <string name="loginOrCreate_key">Log In or Create Account</string>
    <string name="login_or_register">Log In or Register</string>
    <string name="logout">Log Out</string>
    <string name="logout_key">Log Out</string>
    <string name="manage_subscription_key">Manage Subscription</string>
    <string name="meter_login">Have an account? Log in.</string>
    <string name="notification_header">Be the first to know about big news, must-read stories and special offers from The Times.</string>
    <string name="notification_permission_adjust_settings_btn_text">Adjust settings</string>
    <string name="notification_permission_disabled_title">NOTIFICATIONS DISABLED</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_category_key">Notifications Category Key</string>
    <string name="only_when_silent">Only when silent</string>
    <string name="pref_chosen_theme">pref_chosen_theme</string>
    <string name="pref_chosen_theme_title">Theme</string>
    <string name="pref_settings_beta_key">pref_settings_beta_key</string>
    <string name="pref_settings_feedback_key">pref_settings_feedback_key</string>
    <string name="pref_text_resize_key">Text Size</string>
    <string name="replay">REPLAY</string>
    <string name="replay_button_for_video">Replay button for video</string>
    <string name="section_save_content_descrip">section_save</string>
    <string name="section_share_content_decrip">section_share</string>
    <string name="settingsScreen_key">settingsScreen</string>
    <string name="settings_ab_version_key">ab_version_key</string>
    <string name="settings_ab_version_title">AB Version</string>
    <string name="settings_about">About the Application</string>
    <string name="settings_account">Account Settings</string>
    <string name="settings_build_key">build_key</string>
    <string name="settings_connect_account_summary">To receive the full benefits of your subscription</string>
    <string name="settings_copyright">Copyright Notice</string>
    <string name="settings_copyright_key">copyright_key</string>
    <string name="settings_copyright_summary">All materials contained on this site are protected by United States copyright law and may not be reproduced, distributed, transmitted, displayed, published or broadcast without the prior written permission of The New York Times Company or in the case of third party materials, the owner of that content. You may not alter or remove any trademark, copyright or other notice from copies of the content.\n\nLinks to Web sites other than those owned by The New York Times Company are offered as a service to readers. The editorial staff of The New York Times was not involved in their production and is not responsible for their content.\n\n620 8th Ave, New York, NY 10018</string>
    <string name="settings_data_management">DATA MANAGEMENT</string>
    <string name="settings_embrace_id_key">embrace_id_key</string>
    <string name="settings_embrace_id_title">EID</string>
    <string name="settings_faq_key">faq_key</string>
    <string name="settings_feedback">Send App Feedback</string>
    <string name="settings_feedback_key">feedback_key</string>
    <string name="settings_firebase_id_key">firebase_id_key</string>
    <string name="settings_firebase_id_title">Firebase Instance ID</string>
    <string name="settings_frequently_asked_questions">Frequently Asked Questions</string>
    <string name="settings_home_delivery">HOME DELIVERY</string>
    <string name="settings_legal_key">legal_key</string>
    <string name="settings_legal_title">Legal</string>
    <string name="settings_manage_subscription">Manage Subscription</string>
    <string name="settings_privacy_settings">Privacy Settings</string>
    <string name="settings_privacy_settings_key">Privacy Settings Key</string>
    <string name="settings_report_delivery_problem">Report a Delivery Problem</string>
    <string name="settings_report_delivery_summary">Tap here to report a delivery problem</string>
    <string name="settings_report_missing_key">Report Missing Paper</string>
    <string name="settings_subscribe">Subscribe</string>
    <string name="settings_subscription_benefits">Subscription Benefits</string>
    <string name="settings_subscription_benefits_summary">Tap here to see what\'s included in your subscription</string>
    <string name="settings_support">SUPPORT</string>
    <string name="settings_suspend_delivery">Suspend Delivery</string>
    <string name="settings_suspend_delivery_key">Suspend Delivery</string>
    <string name="settings_suspend_delivery_summary">Tap here to suspend your newspaper delivery</string>
    <string name="settings_tos">Terms of Service</string>
    <string name="settings_tos_key">tos_key</string>
    <string name="settings_version_key">version_key</string>
    <string name="settings_version_title">Version</string>
    <string name="sf_footer_read_later">READ LATER</string>
    <string name="sf_footer_share">SHARE</string>
    <string name="share">SHARE</string>
    <string name="share_button_for_video">Share Button for Video</string>
    <string name="subscribe_key">Subscribe</string>
    <string name="subscription_benefits_key">Subscription Benefits Key</string>
    <string name="support_category_key">Support Category Key</string>
    <string name="text_size_setting_title">Text Size</string>
    <string name="truncator_card_dismiss">Not Now</string>
    <string name="truncator_card_please_update">Please update your information so that your New York Times subscription won\'t be cancelled.</string>
    <string name="truncator_card_unable_to_process">We\'re unable to process the payment for your subscription.</string>
    <string name="truncator_card_update_payment">Update payment information now</string>
    <string name="username_key">Username</string>
    <string name="vibrate">Vibrate</string>
</resources>