<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.preference.PreferenceCategory android:key="@string/account_category_key">
        <com.nytimes.android.preference.NYTPreference
            android:title="@string/connectAccount"
            android:key="@string/connect_account_key"
            android:summary="@string/settings_connect_account_summary"/>
        <com.nytimes.android.preference.UsernamePreference
            android:selectable="false"
            android:key="@string/username_key"/>
        <com.nytimes.android.preference.NYTPreference
            android:title="@string/settings_subscribe"
            android:key="@string/subscribe_key"/>
        <com.nytimes.android.preference.LoginInOrRegisterPreference
            android:title="@string/login_or_register"
            android:key="@string/loginOrCreate_key"/>
        <com.nytimes.android.preference.SavedForLaterPreference/>
        <com.nytimes.android.preference.GiftShareHubPreference/>
        <com.nytimes.android.preference.NYTPreference
            android:title="@string/settings_account"
            android:key="@string/account_settings_key"/>
        <com.nytimes.android.preference.NYTPreference
            android:title="@string/settings_privacy_settings"
            android:key="@string/settings_privacy_settings_key"/>
        <com.nytimes.android.preference.NYTPreference
            android:title="@string/settings_manage_subscription"
            android:key="@string/manage_subscription_key"/>
        <com.nytimes.android.preference.NYTPreference
            android:title="@string/settings_subscription_benefits"
            android:key="@string/subscription_benefits_key"
            android:summary="@string/settings_subscription_benefits_summary"/>
        <com.nytimes.android.preference.LogoutPreference
            android:title="@string/logout"
            android:key="@string/logout_key"/>
        <com.nytimes.android.preference.NYTPreference
            android:icon="@drawable/ic_settings_24dp"
            android:title="@string/developer_settings_title"
            android:key="@string/pref_settings_beta_key"/>
        <com.nytimes.android.preference.NYTListPreference
            android:icon="@drawable/ic_theme"
            android:entries="@array/Theme"
            android:title="@string/pref_chosen_theme_title"
            android:key="@string/pref_chosen_theme"
            android:defaultValue="-1"
            android:entryValues="@array/ThemeValues"/>
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory android:key="@string/notifications_category_key">
        <com.nytimes.android.preference.NYTPreference
            android:title="@string/notifications"
            android:key="@string/key_notifications"/>
        <com.nytimes.android.preference.NYTPreference
            android:title="@string/text_size_setting_title"
            android:key="@string/pref_text_resize_key"/>
        <com.nytimes.android.preference.NYTListPreference
            android:entries="@array/autoPlaySettings"
            android:title="@string/auto_play_video_settings_title"
            android:key="@string/auto_play_video_settings_key"
            android:defaultValue="@string/autoplay_default"
            android:entryValues="@array/autoPlaySettings_values"/>
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        android:title="@string/settings_data_management"
        android:key="@string/data_management_category_key">
        <com.nytimes.android.preference.NYTListPreference
            android:entries="@array/offlineBackgroundUpdate"
            android:title="@string/background_update"
            android:key="@string/background_update_key"
            android:summary="@string/background_desc"
            android:defaultValue="@string/background_update_default"
            android:entryValues="@array/offlineBackgroundUpdate_values"/>
        <com.nytimes.android.preference.NYTListPreference
            android:entries="@array/downloadSections"
            android:title="@string/download_sections_title"
            android:key="@string/key_download_sections"
            android:summary="@string/download_sections_summary"
            android:defaultValue="@string/download_top_value"
            android:entryValues="@array/downloadSections_values"/>
        <com.nytimes.android.preference.NYTListPreference
            android:entries="@array/downloadImages"
            android:title="@string/download_images_title"
            android:key="@string/hybrid_download_image_key"
            android:summary="@string/download_images_summary"
            android:defaultValue="@string/hybrid_download_some_images_value"
            android:entryValues="@array/downloadImages_values"/>
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        android:title="@string/settings_home_delivery"
        android:key="@string/home_delivery_key">
        <com.nytimes.android.preference.NYTPreference
            android:title="@string/settings_suspend_delivery"
            android:key="@string/settings_suspend_delivery_key"
            android:summary="@string/settings_suspend_delivery_summary"/>
        <com.nytimes.android.preference.NYTPreference
            android:title="@string/settings_report_delivery_problem"
            android:key="@string/settings_report_missing_key"
            android:summary="@string/settings_report_delivery_summary"/>
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        android:title="@string/settings_support"
        android:key="@string/support_category_key">
        <com.nytimes.android.preference.ManageAccountPreference/>
        <com.nytimes.android.preference.ContactUsPreference/>
        <com.nytimes.android.preference.NYTPreference
            android:title="@string/settings_feedback"
            android:key="@string/pref_settings_feedback_key"/>
        <com.nytimes.android.preference.ContactNewsroomPreference/>
        <com.nytimes.android.preference.FAQPreference/>
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory android:key="@string/about_category_key">
        <com.nytimes.android.preference.NYTPreference
            android:title="@string/settings_about"
            android:key="@string/help_key"/>
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>
