<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/replay_container"
        style="@style/WidthWrapHeightWrap">
        <ImageView
            android:layout_gravity="center"
            android:id="@+id/replay_icon"
            android:layout_width="48dp"
            android:layout_height="40dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/cover_replay"
            android:contentDescription="@string/replay_button_for_video"/>
        <TextView
            android:gravity="center"
            android:layout_gravity="center"
            android:id="@+id/replay_text"
            android:text="@string/replay"
            style="@style/EndslateText"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/share_container"
        style="@style/WidthWrapHeightWrap">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_gravity="center"
            android:id="@+id/share_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/share_button_for_video"
            app:srcCompat="@drawable/ic_share_filled"
            app:tint="@color/ds_times_white"/>
        <TextView
            android:gravity="center"
            android:layout_gravity="center"
            android:id="@+id/share_text"
            android:text="@string/share"
            style="@style/EndslateText"/>
    </LinearLayout>
</merge>
