<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/card"
    android:background="@color/meter_gateway_background"
    android:layout_height="wrap_content"
    style="@style/MeterGatewayCard">
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_gravity="center_horizontal"
        android:id="@+id/nameplate"
        android:layout_width="@dimen/nameplate_width"
        android:layout_height="@dimen/meterNameplateHeight"
        android:layout_marginTop="@dimen/meterNameplateMarginTop"
        android:layout_marginBottom="@dimen/meterNameplateMarginBottom"
        android:src="@drawable/nyt_nameplate"/>
    <LinearLayout
        android:background="@color/ds_grayE2"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <TextView
        android:id="@+id/cardTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/meter_padding_bottom_region_elements"
        android:contentDescription="@string/articlesLeft"
        style="@style/TextView.Meter.ArticleLeft"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/meter_padding_bottom_region_elements"/>
    <TextView
        android:id="@+id/cardDescription"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/meter_padding_bottom_region_elements"
        style="@style/TextView.Meter.GatewayExplanatory"/>
    <Button
        android:id="@+id/cardButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/meter_read_button_height"
        android:layout_marginBottom="@dimen/meter_button_bottom_margin"
        style="@style/MeterGatewayActionButton"/>
    <LinearLayout
        android:gravity="center"
        android:id="@+id/loginContainer"
        android:layout_width="@dimen/meter_read_button_width"
        android:layout_height="@dimen/meter_read_button_height"
        style="@style/ShadowContainer">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meter_login"
            android:contentDescription="@string/logInMC"
            style="@style/TextView.MeterLink"/>
    </LinearLayout>
    <Space
        android:id="@+id/gatewayBottomSpace"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/gateway_bottom_space"/>
</LinearLayout>
