<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="bottom"
    android:id="@+id/truncator_card"
    android:background="@color/truncator_card_color"
    android:paddingBottom="@dimen/truncator_card_button_margin_bottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
    <TextView
        android:textSize="@dimen/truncator_header_text_size"
        android:textColor="@color/truncator_header_text_color"
        android:id="@+id/truncator_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/truncator_header_margin_top"
        android:layout_marginBottom="@dimen/truncator_header_margin_bottom"
        android:text="@string/truncator_card_unable_to_process"
        android:lineSpacingExtra="3sp"
        android:fontFamily="@font/font_chelt_book"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/truncator_subheader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.9"/>
    <TextView
        android:textSize="@dimen/truncator_subheader_text_size"
        android:textColor="@color/truncator_subheader_text_color"
        android:id="@+id/truncator_subheader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/truncator_subheader_margin_bottom"
        android:text="@string/truncator_card_please_update"
        android:lineSpacingExtra="5sp"
        android:fontFamily="@font/font_franklin_medium"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/update_card_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.9"/>
    <Button
        android:textSize="@dimen/truncator_button_text_size"
        android:textColor="@color/truncator_button_text_color"
        android:id="@+id/update_card_button"
        android:background="@drawable/truncator_button_background"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/truncator_card_button_vertical_margin"
        android:text="@string/truncator_card_update_payment"
        android:layout_marginStart="@dimen/truncator_card_button_horizontal_margin"
        android:layout_marginEnd="@dimen/truncator_card_button_horizontal_margin"
        app:layout_constraintBottom_toTopOf="@+id/dimiss_card_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.8"
        app:layout_goneMarginBottom="0dp"
        style="@style/MeterGatewayActionButton"/>
    <Button
        android:textSize="@dimen/truncator_button_text_size"
        android:textColor="@color/truncator_button_dismiss_text_color"
        android:id="@+id/dimiss_card_button"
        android:background="@drawable/truncator_button_background_dismiss"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/truncator_card_dismiss"
        android:layout_marginStart="@dimen/truncator_card_button_horizontal_margin"
        android:layout_marginEnd="@dimen/truncator_card_button_horizontal_margin"
        android:stateListAnimator="@animator/state_list_press_alpha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.8"
        style="@style/MeterGatewayActionButton"/>
</androidx.constraintlayout.widget.ConstraintLayout>
